--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -15,7 +15,8 @@ jobs :
         run : npm run lint
 
   test :
-    - name : Get Code
+    runs-on : ubuntu-latest
+      - name : Get Code
         uses : actions/checkout@v3
 
       - name : Install Dependencies
