--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -7,6 +7,11 @@ jobs :
     steps : 
       - name : Get Code
         uses : actions/checkout@v3
+      
+      - name : Install NodeJS
+        uses : action/setup-node@v3
+        with : 
+          node-version : 18
 
       - name : Install Dependencies
         run : npm ci
